--- a/les-panneaux-solaires-thermiques/construire-un-panneau-solaire/construire-un-panneau-solaire-thermique/index.html
+++ b/les-panneaux-solaires-thermiques/construire-un-panneau-solaire/construire-un-panneau-solaire-thermique/index.html
@@ -441,7 +441,7 @@ du panneau et la vitre transparent sur la face avant.</p>
 
     <div id="exitpopup-modal">
       <div class="underlay"></div>
-	  <div class="exitpopup-modal-window" style="width:600px !important; height:500px !important;">
+	  <div class="exitpopup-modal-window" style="width:60% !important; height:80% !important;">
         <div class="modal-title" style="background-color:#9856ef !important;">
           <h3>Combien pourriez vous économiser ?</h3>
         </div>
@@ -482,28 +482,32 @@ du panneau et la vitre transparent sur la face avant.</p>
     color: #c0ccda;
     border-width: px;
   }
+
+.sib-form {
+padding-top: 0px; !
+}
 </style><link rel="stylesheet" href="https://assets.sendinblue.com/component/form/2ef8d8058c0694a305b0.css"><link rel="stylesheet" href="https://assets.sendinblue.com/component/clickable/b056d6397f4ba3108595.css"><link rel="stylesheet" href="https://sibforms.com/forms/end-form/build/sib-styles.css"><div class="sib-form" style="text-align: center;
          background-color: #ffffff;                                           ">
   <div id="sib-form-container" class="sib-form-container">
     <div id="sib-container" class="sib-container--large sib-container--horizontal" style=" text-align:center; background-color:rgba(255,255,255,1); max-width:540px; border-radius:3px; border-width:0px; border-color:#C0CCD9; border-style:solid;">
       <form id="sib-form" method="POST" action="https://sibforms.com/serve/MUIEAHa7FJ_2FP63KgyKJ1wYS1R492wCTlsx2p7NICKXrqyR6mMDyxgmyGrfBbNS08gZZI2IrM98OP7ghRGIOgbheHmmJ4O7IaUygyKL3ISntoAOqjJyD3rMpQ3k23u3U3rD2nZWMcRSgyh4e3Wjgr3TD8LmN7kc15zBMiVkmXQd2zSvd9ZIYOZ1LO5vMn75NMULfS9Tx39fb0O2">
-        <div style="padding: 8px 0;">
+        <div style="padding: 4px 0;">
           <div class="sib-form-block" style=" font-size:16px; text-align:left; font-weight:700; font-family:" helvetica sans-serif color: background-color:transparent border-width:px>
             <p>Calculez vos économies</p>
           </div>
         </div>
-        <div style="padding: 8px 0;">
+        <div style="padding: 4px 0;">
           <div class="sib-form-block" style=" font-size:12px; text-align:left; font-family:" helvetica sans-serif color: background-color:transparent border-width:px>
             <div class="sib-text-form-block">
               <p>D'un simple clic, notre simulateur vous permet d'obtenir une estimation précise de l'énergie solaire disponible pour votre maison et des économies que vous pourrez réaliser.</p>
             </div>
           </div>
         </div>
-        <div style="padding: 8px 0;">
+        <div style="padding: 4px 0;">
           <div class="sib-form-block sib-image-form-block" style="text-align: center">
             <img src="https://img.mailinblue.com/1769634/images/rnb/original/5d5f9ff9d89c3200135c8655.png" style="width: 500px;height: 179px;" alt="" title=""></div>
         </div>
-        <div style="padding: 8px 0;">
+        <div style="padding: 4px 0;">
           <div class="sib-input sib-form-block">
             <div class="form__entry entry_block">
               <div class="form__label-row form__label-row--horizontal">
@@ -520,7 +524,7 @@ du panneau et la vitre transparent sur la face avant.</p>
             </div>
           </div>
         </div>
-        <div style="padding: 8px 0;">
+        <div style="padding: 4px 0;">
           <div class="sib-form-block" style="text-align: center">
             <button class="sib-form-block__button" style=" font-size:16px; text-align:center; font-weight:700; font-family:" helvetica sans-serif color: background-color: border-radius:3px border-width:0px form="sib-form" type="submit">
               Accéder au Simulateur
