--- a/wp_sunberry/les-panneaux-solaires-thermiques/les-panneaux-solaires/les-panneaux-solaires-thermiques/index.html
+++ b/wp_sunberry/les-panneaux-solaires-thermiques/les-panneaux-solaires/les-panneaux-solaires-thermiques/index.html
@@ -310,6 +310,7 @@ ga('send', 'pageview');
 					<div id="shailan-subpages-2">
 						<ul class="subpages"><li class="page_item page-item-744"><a href="https://www.sunberry.fr/les-panneaux-solaires-thermiques/chauffe-eau-piscine-solaire/" title="Chauffe piscine solaire" rel="">Chauffe piscine solaire</a></li>
 <li class="page_item page-item-475"><a href="https://www.sunberry.fr/les-panneaux-solaires-thermiques/construire-un-panneau-solaire/" title="Construire un panneau solaire" rel="">Construire un panneau solaire</a></li>
+<li class="page_item page-item-1015"><a href="https://www.sunberry.fr/les-panneaux-solaires-thermiques/le-chauffage-solaire/" title="Le chauffage solaire" rel="">Le chauffage solaire</a></li>
 <li class="page_item page-item-531"><a href="https://www.sunberry.fr/les-panneaux-solaires-thermiques/les-panneaux-solaires/" title="Les différents types de panneaux solaires" rel="">Les différents types de panneaux solaires</a></li>
 						</ul></div>
 
