--- a/wp_sunberry/inscription-formation-solaire/index.html
+++ b/wp_sunberry/inscription-formation-solaire/index.html
@@ -365,6 +365,19 @@ ga('send', 'pageview');
 					<div class="elementor-text-editor elementor-clearfix"><h4 class="mbr-section-subtitle mbr-fonts-style display-7">L’inscription vous donne accès à : la liste complète du matériel, l’accès au guide de fabrication et aux vidéos explicatives, la Sunberry App à installer sur votre Raspberry Pi, au forum de la communauté si vous avez besoin d’aide.</h4></div>
 				</div>
 				</div>
+				<div class="elementor-element elementor-element-2d6b444 elementor-widget elementor-widget-alert" data-id="2d6b444" data-element_type="widget" data-widget_type="alert.default">
+				<div class="elementor-widget-container">
+					<div class="elementor-alert elementor-alert-success" role="alert">
+			<span class="elementor-alert-title">Nos formations sont disponibles en ligne uniquement !</span>
+							<span class="elementor-alert-description">Vous n'aurez pas à réserver une date ou vous déplacer. Vous pourrez commencer la construction de votre chauffage solaire immédiatement, et ensuite progresser à votre rythme, grâce aux instructions détaillées et aux vidéos explicatives. Le forum sera là pour répondre à vos questions et vous aider si vous bloquez sur un point.
+Cela vous permet de vous former à un prix défiant toute concurrence.<br><br>Paiement par chèque ou virement possible. Contactez nous à contact@sunberry.io</span>
+										<button type="button" class="elementor-alert-dismiss">
+					<span aria-hidden="true">×</span>
+					<span class="elementor-screen-only">Rejeter l’alerte</span>
+				</button>
+					</div>
+				</div>
+				</div>
 						</div>
 			</div>
 		</div>
