--- a/inscription-formation-solaire/index.html
+++ b/inscription-formation-solaire/index.html
@@ -370,7 +370,7 @@ ga('send', 'pageview');
 					<div class="elementor-alert elementor-alert-success" role="alert">
 			<span class="elementor-alert-title">Nos formations sont disponibles en ligne uniquement !</span>
 							<span class="elementor-alert-description">Vous n'aurez pas à réserver une date ou vous déplacer. Vous pourrez commencer la construction de votre chauffage solaire immédiatement, et ensuite progresser à votre rythme, grâce aux instructions détaillées et aux vidéos explicatives. Le forum sera là pour répondre à vos questions et vous aider si vous bloquez sur un point.
-Cela vous permet de vous former à un prix défiant toute concurrence.<br><br>Paiement par chèque ou virement possible. Contactez nous à contact@sunberry.io</span>
+Cela vous permet de vous former à un prix défiant toute concurrence.<br><br>Paiement par chèque ou virement possible. Contactez nous à contact@sunberry.fr</span>
 										<button type="button" class="elementor-alert-dismiss">
 					<span aria-hidden="true">×</span>
 					<span class="elementor-screen-only">Rejeter l’alerte</span>
@@ -747,7 +747,7 @@ Cela vous permet de vous former à un prix défiant toute concurrence.<br><br>Pa
 					<div class="elementor-widget-wrap">
 				<div class="elementor-element elementor-element-92af67d elementor-widget elementor-widget-text-editor" data-id="92af67d" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-					<div class="elementor-text-editor elementor-clearfix"><p>Avec votre inscription, vous aurez accès:</p><p>– au guide du chauffage solaire thermique (79 pages) <br>– aux fichiers Pdf d’explications <br>– à plus de 20 vidéos explicatives vous montrant toutes les étapes de fabrication <br>– au téléchargement de la Sunberry App pour piloter votre chauffage <br>– au forum de la communauté Sunberry</p><p>Le matériel n’est pas compris et sera commandé par vos soins chez les fournisseurs disponibles dans notre liste ou dans votre magasin de bricolage préféré..</p><p>– compter 300€ environ pour le montage complet sans réservoir et radiateur : capteurs, Raspberry, tuyaux, raccord, pompe etc. <br>– à partir de 15€/m² de panneau solaire environ, selon les options choisies, soit 10x moins cher que les panneaux solaires du commerce.</p><p><b>Vous avez des questions et n’avez pas trouvé la réponse sur notre site? n’hésitez pas à nous contacter à l’adresse <a href="mailto:contact@sunberry.io" target="_blank" rel="noopener">contact@sunberry.io</a></b></p></div>
+					<div class="elementor-text-editor elementor-clearfix"><p>Avec votre inscription, vous aurez accès:</p><p>– au guide du chauffage solaire thermique (79 pages) <br>– aux fichiers Pdf d’explications <br>– à plus de 20 vidéos explicatives vous montrant toutes les étapes de fabrication <br>– au téléchargement de la Sunberry App pour piloter votre chauffage <br>– au forum de la communauté Sunberry</p><p>Le matériel n’est pas compris et sera commandé par vos soins chez les fournisseurs disponibles dans notre liste ou dans votre magasin de bricolage préféré..</p><p>– compter 300€ environ pour le montage complet sans réservoir et radiateur : capteurs, Raspberry, tuyaux, raccord, pompe etc. <br>– à partir de 15€/m² de panneau solaire environ, selon les options choisies, soit 10x moins cher que les panneaux solaires du commerce.</p><p><b>Vous avez des questions et n’avez pas trouvé la réponse sur notre site? n’hésitez pas à nous contacter à l’adresse <a href="mailto:contact@sunberry.io" target="_blank" rel="noopener">contact@sunberry.fr</a></b></p></div>
 				</div>
 				</div>
 						</div>
@@ -826,7 +826,7 @@ Cela vous permet de vous former à un prix défiant toute concurrence.<br><br>Pa
 					<div class="elementor-widget-wrap">
 				<div class="elementor-element elementor-element-4bd7ecc2 elementor-widget elementor-widget-text-editor" data-id="4bd7ecc2" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-					<div class="elementor-text-editor elementor-clearfix"><h3 class="mbr-fonts-style group-title mbr-bold display-5">Sunberry</h3><div class="items"><p class="item mbr-fonts-style display-7">30200 Bagnols-sur-Cèze / France</p><p class="item mbr-fonts-style display-7">contact@sunberry.io</p></div></div>
+					<div class="elementor-text-editor elementor-clearfix"><h3 class="mbr-fonts-style group-title mbr-bold display-5">Sunberry</h3><div class="items"><p class="item mbr-fonts-style display-7">30200 Bagnols-sur-Cèze / France</p><p class="item mbr-fonts-style display-7">contact@sunberry.fr</p></div></div>
 				</div>
 				</div>
 						</div>
